Fixed root in index

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Weather Jukebox</title>
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
@@ -8,6 +12,7 @@
 </head>
 
 <body>
+	<div id="root"></div>
 <div id="dz-root"></div>
 <div id="controlers">
 	<input type="button" onclick="DZ.player.playAlbum(238939); return false;" value="Play Daft Punk - Discovery"/>
