--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 </head>
 
 <body>
